# glip

./: CMakeLists.txt  README.md
src/: CMakeCache.txt  Makefile  cmake_install.cmake  glip.h  glipColors.c  glipDefaults.h  glipDisplayImage.c  glipImageSt.h  glipImages.c  glipImages.h  install_manifest.txt
